--- a/.github/workflows/1-nexus-bootstrap.yml
+++ b/.github/workflows/1-nexus-bootstrap.yml
@@ -20,6 +20,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
+          debug: true #
           script: |
             sudo yum update -y
             sudo yum install -y docker
