--- a/.github/workflows/2-main-ci-cd.yml
+++ b/.github/workflows/2-main-ci-cd.yml
@@ -15,6 +15,11 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Configure Docker to trust HTTP registry
+        run: |
+          sudo mkdir -p /etc/docker
+          echo '{"insecure-registries":["54.208.126.39:8082"]}' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
 
       - name: Login to Nexus Docker Registry
         uses: docker/login-action@v2
