--- a/.github/workflows/2-main-ci-cd.yml
+++ b/.github/workflows/2-main-ci-cd.yml
@@ -13,17 +13,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Create Buildkit config for HTTP registry
-        run: |
-          mkdir -p ~/.docker/buildkit
-          echo '[registry."${{ secrets.NEXUS_REGISTRY_URL }}"]' > ~/.docker/buildkit/buildkitd.toml
-          echo '  http = true' >> ~/.docker/buildkit/buildkitd.toml
-          echo '  insecure = true' >> ~/.docker/buildkit/buildkitd.toml
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          config: ~/.docker/buildkit/buildkitd.toml
+      - name: Configure Docker to trust HTTP registry
+        run: |
+          sudo mkdir -p /etc/docker
+          echo '{"insecure-registries":["54.208.126.39:8082"]}' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
 
       - name: Login to Nexus Docker Registry
         uses: docker/login-action@v2
